2009-06-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* libopenvas/store.c (store_get_plugin, store_get_plugin_f): Removed.
	These functions are not needed anymore.

2009-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* libopenvascommon/nvti.c (nvti_from_keyfile): Guard NULL pointer
	for g_convert.

2009-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* libopenvascommon/nvti.c (nvti_from_keyfile, nvti_to_keyfile): Before
	writing a copyright, description, name or summary, convert string to
	UTF8 and convert to latin-1 when reading it.

2009-06-15  Michael Wiegand <michael.wiegand@intevation.de>

	* ChangeLog: Corrected module name in last entry.

2009-06-15  Michael Wiegand <michael.wiegand@intevation.de>

	* configure.in: Added check for gcrypt.h which properly sets $LIBS so
	gcrypt can be correctly linked. This fixes the linker warnings described
	in Bug #1035 (http://bugs.openvas.org/1035) that occured if
	openvas-libraries was configured with LDFLAGS="-Wl,-z,defs"
	(--no-undefined).

	* configure: Regenerated.

2009-06-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Main part of the implementation for Change Request #33
	(Change server-side NVT cache from binary dumps to keyfiles),
	see http://www.openvas.org/openvas-cr-33.html.

	One important effect of this change is that in the cache
	directory news files with the suffix ".nvti" will be created.
	The old ".desc" files will remain there. These can be deleted.

	* libopenvas/store.c (str2arglist): Apply strchr
	only if the string is non-empty.
	(store_load_plugin, store_plugin, store_fetch_path,
	store_fetch_version, store_fetch_summary, store_fetch_description,
	store_fetch_copyright, store_fetch_family, store_fetch_oid,
	store_fetch_cve_id, store_fetch_bugtraq_id, store_fetch_xref,
	store_fetch_tag, store_fetch_required_keys, store_fetch_excluded_keys,
	store_fetch_required_ports, store_fetch_required_udp_ports):