@@ -30,8 +30,4 @@ void store_plugin(struct arglist *,  char *);
 struct arglist * store_load_plugin(char *, char *,  struct arglist*);
 int store_init(char *);
 
-/* These can be removed with the next major release after 2.0: */
-__attribute__ ((__deprecated__)) int store_init_sys(char *);
-__attribute__ ((__deprecated__)) int store_init_user(char *);
-
 #endif
